Random improvements.
Signed-off-by: Jacek Bilski <jacek@bilski.tech>